# ScaleForge

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  demo_registry_validation.py  pyproject.toml  pyproject_root.toml  pytest.ini  scaleforge-gui.py
${APP_ROOT}/: scaleforge.db
.github/workflows/: android.yml  beta-bundle.yml  ci.yml  demo-smoke.yml  release.yml  smoke.yml  unified-ci.yml
android_app/: buildozer.spec  main.py
demo_logs/: sprint2.txt
docs/: ARCHITECTURE.md  DEMO.md  advanced.md  feedback.md  feedback_summary.md  first_steps.md  good-first-issues.md  mobile_testing.md
scaleforge/: __init__.py
scaleforge/backend/: __init__.py  selector.py
scripts/: build_windows.sh  preflight_sf.sh  run-slice.sh
src/PIL/: __init__.py
src/scaleforge/: __init__.py  capabilities.py  errors.py
src/scaleforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scaleforge/backend/: __init__.py  base.py  caps.py  detector.py  probe.py  selector.py  spec.py  torch_backend.py  vulkan_backend.py
src/scaleforge/cli/: __init__.py  __main__.py  demo.py  info.py  main.py  utils.py
src/scaleforge/config/: loader.py
src/scaleforge/db/: models.py
src/scaleforge/demo/: upscale.py
src/scaleforge/gui/: app.py  core.py  drag_drop.py  event_bridge.py  job_card.py  job_panel.py  layout.kv  main_window.py  preset_manager.py
src/scaleforge/gui/components/: file_input.py  job_panel.py  resolution_editor.py  status_panel.py
src/scaleforge/models/: downloader.py  registry.py  registry.schema.json
src/scaleforge/pipeline/: entry.py  queue.py
src/scaleforge/utils/: hash.py  presets_io.py  settings_io.py
src/scaleforge/video/: frames.py  pipeline.py
tests/: test_backend_canonicalization.py  test_backend_selector.py  test_capability_caching.py  test_cli_smoke.py  test_cli_smoke.py.bak  test_demo_batch_extras.py  test_demo_batch_filters.py  test_demo_e2e.py  test_downloader_offline.py  test_gpu_caps.py  test_gpu_caps.py.bak  test_hash_utils.py  test_job_state.py  test_metadata.py  test_model_install_cli.py  test_oversize.py  test_pipeline_entry.py  test_registry_schema.py  test_registry_validate.py  test_resolution_editor.py  test_torch_backend.py  test_version_cli.py
tests/gui/: test_app.py  test_implementation.py
tests/video/: test_frame_extractor.py
