[project]
name = "scaleforge"
version = "0.4.0-alpha"
description = "ScaleForge – portable image upscaler powered by Real-ESRGAN"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "ScaleForge Team", email = "openhands@all-hands.dev"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "click>=8.1.7",
    "Pillow>=10.3.0",
]

[project.urls]
Homepage = "https://example.com/scaleforge"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
scaleforge = "scaleforge.cli.main:cli"

[project.optional-dependencies]
gui = [
    "kivy>=2.3.0"
]
# Runtime heavy extras
torch = [
    "torch>=2.0.0; sys_platform != 'win32'",
    "torch>=2.0.0; sys_platform == 'win32'",
    "realesrgan==0.2.5.0", 
    "basicsr==1.4.2",
    "xformers>=0.0.22; sys_platform != 'win32'",
    "charset-normalizer<3.0.0; python_version >= '3.12'"
]

# Development extras (includes test/lint)
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pytest-cov>=4",
    "hypothesis>=6.100.0",
    "pytest-mock>=3.0",
    "ipython>=8.0",
]
[tool.ruff]
extend-exclude = ["build", "dist", "*.egg-info"]
